# leo_physick_tgnn

./: README.md  dataset_verify.py  gen_dataset.sh  pyproject.toml  rollout.sh  test.py  train.sh
configs/: default.yaml
configs/data/: starlink_like.yaml  synthetic_debug.yaml
configs/model/: tgn_kan.yaml  tgn_mlp.yaml  tgn_physick.yaml
configs/train/: one_step.yaml  rollout.yaml
data/: synthetic_leo_1000.tle  synthetic_leo_2000.tle  synthetic_leo_500.tle  synthetic_leo_5000.tle
scripts/: _cfg.py  eval.py  export_rollout_metrics.py  gen_data.py  gen_data_2000.py  make_synthetic_tle.py  plot_rollout_curves.py  plot_system_metrics.py  rollout.py  train.py
src/leo_pg/: __init__.py  leo_pg - Files - File Browser.webloc
src/leo_pg/data/: __init__.py  collate.py  dataset.py  io.py  schema.py  splits.py
src/leo_pg/graph/: __init__.py  builder.py  edge_types.py  hetero.py
src/leo_pg/kernels/: __init__.py  interface.py  kan.py  mlp.py
src/leo_pg/models/: registry.py
src/leo_pg/physics/: __init__.py  coeff_head.py  cox_intensity.py  descriptors.py  handover_cost.py  kernel_bank.py  normalize.py  physick_message.py  residual_time.py  risk_probability.py
src/leo_pg/sim/: __init__.py  channel.py  environment.py  ephemeris.py  interference.py  load.py
src/leo_pg/train/: checkpoint.py  logger.py  losses.py  metrics.py  rollout.py  system_metrics.py  trainer.py
src/leo_pg/utils/: device.py  timer.py
src/leo_physick_tgn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_descriptors.py  test_graph_builder.py  test_message_switch.py
(+13 files in other folders)
